Update performance.testing.and.tuning.md